# parakeet

./: .copilot-instructions.md  .dockerignore  .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-and-wiz-scan-docker-image.yml
src/parakeet/: __init__.py  main.py
tests/: test_integration.py  test_unit.py
